究极最终版本呀哈哈   隐藏的水平滚动条

--- a/九宫格.css
+++ b/九宫格.css
@@ -3,7 +3,7 @@
     margin: 1vw;
     height:30vw;
     width:30vw;
-    background-color: orange;
+    background-color: #fea500;
     float:left;
     border-radius:5px;
 }
