--- a/魔镜介绍页面.css
+++ b/魔镜介绍页面.css
@@ -1,31 +1,29 @@
 body{
-    background-color:#68cdd6
+    background-color:#68cdd6;
+    overflow-x: hidden;
 }
 .outer{
-    height:100vw;
-    width:100vw;
-    float:left;
+    width:600px;
+    height: 1000px;
    }
 .title{
-    height:25vw;
-    width:100vw;
-    float:left;
+    height:250px;
+    width:600px;
 }
 .content{
-    padding:5px;,
     text-align: center;
     color: white;
-    height:25vw;
-    width:100vw;
+    height:250px;
+    width: 600px;
     float:left;
 }
 .qqgroup{
-    height:50vw;
-    width:50vw;
+    height:500px;
+    width: 300px;
     float:left;
 }
 .homepagelink{
-    height:50vw;
-    width:50vw;
+    height:500px;
+    width:300px;
     float:left;
 }
